TnTComponents/Styles/TnTComponents/_input.scss
/* ... */
label.tnt-components:has(input[type=checkbox]) {
    position: relative;
    outline: none;
    border: none;
    display: inline-flex;
    align-items: center;
    vertical-align: middle;
    min-height: 1.25rem;
    user-select: none;
    margin: 0.5rem 0.5rem 0.5rem 0.75rem;

    &:not(:has(input:disabled)) {
        cursor: pointer;
    }

    &:has(input:disabled) {
        opacity: 0.3;
        cursor: not-allowed;
    }

    &:has(.tnt-input.modified.invalid) {
        span.tnt-label {
            color: $tnt-color-error;
        }
    }

    .tnt-icon {
        font-size: 20px;
    }

    &:has(.tnt-input:not(.tnt-alternative)) {
        margin-right:1.5rem;
        span.tnt-label {
            margin-left: 1.5rem;
            margin-right: 0.5rem;
        }

        .tnt-icon.tnt-end {
            position: absolute;
            right: -1.5rem;
        }

        &:has(.tnt-icon.tnt-start) {
            span.tnt-label {
                margin-left: 2rem;
            }
        }
    }

    &:has(.tnt-input.tnt-alternative) {
        margin-right:2rem;
        span.tnt-label {
            margin-left: 3rem;
            margin-right: 0.5rem;
        }

        .tnt-icon.tnt-end {
            position: absolute;
            right: -1.5rem;
        }

        &:has(.tnt-icon.tnt-start) {
            span.tnt-label {
                margin-left: 3.75rem;
            }
        }
    }

    .tnt-input {
        outline: none;
        background-color: transparent;
    }

    input {
        appearance: none;
    }

    .tnt-input:not(.tnt-alternative) {
        padding-left: 1rem;

        &:before, &:after {
            content: '';
            position: absolute;
            transition: 200ms ease-in-out;
        }

        &:before {
            border-radius: 0.125rem;
            width: 1.1rem;
            height: 1.1rem;
            border: 2px solid var(--outline-color);
            box-sizing: border-box;
            top: 0.1rem;
            background-color: transparent;
        }

        &:after {
            border-bottom: 2px solid var(--check-mark-color);
            border-right: 2px solid var(--check-mark-color);
            width: 0.35rem;
            height: 0.6rem;
            left: 1.225rem;
            top: 0.3rem;
            transform: rotateZ(35deg) translateY(-0.15rem) rotateY(90deg);
        }

        &:has(input:checked) {
            &:before {
                background-color: var(--fill-color);
                border-color: var(--fill-color);
            }

            &:after {
                transform: rotateZ(35deg) translateY(-0.15rem) rotateY(0deg);
            }
        }


        &:has(.tnt-start) {
            &:before, &:after {
                margin-left: 2rem;
            }
        }

        &.modified.invalid {
            &:before {
                border-color: $tnt-color-error;
            }

            &:has(input:checked) {
                &:before {
                    background-color: $tnt-color-error;
                }

                &:after {
                    border-color: $tnt-color-on-error;
                }
            }

            .tnt-icon.tnt-end {
                color: $tnt-color-error;
            }
        }
    }

    .tnt-input.tnt-alternative {
        &:before, &:after {
            content: '';
            position: absolute;
            transition: 200ms ease-in-out;
        }

        &:before {
            width: 2.75rem;
            height: 1.5rem;
            border-radius: 1rem;
            border: 2px solid var(--outline-color);
            box-sizing: border-box;
            top: 0.1rem;
            background-color: var(--unchecked-fill-color);
        }

        &:after {
            height: 0.75rem;
            width: 0.75rem;
            left: 0.3rem;
            top: 0.45rem;
            border-radius: 50%;
            background-color: var(--unchecked-knob-color);
        }

        &:has(input:checked) {
            &:before {
                background-color: var(--checked-fill-color);
            }

            &:after {
                background-color: var(--checked-knob-color);
                transform: translateX(1.3rem) scale(140%);
            }
        }

        &:has(.tnt-start) {
            &:before, &:after {
                margin-left: 2rem;
            }
        }

        &.modified.invalid {
            &:before {
                border-color: $tnt-color-error-container;
                background-color: $tnt-color-error;
            }

            &:after {
                background-color: $tnt-color-on-error;
            }

            &:has(input:checked) {
                &:before {
                    background-color: $tnt-color-error-container;
                }

                &:after {
                    background-color: $tnt-color-on-error-container;
                }
            }

            .tnt-icon.tnt-end {
                color: $tnt-color-error;
            }
        }
    }

    &:hover {
        &:not(:has(input:disabled)) {
            .tnt-input.tnt-alternative {
                &:after {
                    transform: scale(165%);
                }

                &:has(input:checked) {
                    &:after {
                        transform: translateX(1.35rem) scale(165%);
                    }
                }
            }
        }
    }
}
/* ... */

